--- a/profiles.html
+++ b/profiles.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-    <title>Crear Usuario</title>
+    <title>Usuarios</title>
     <!-- Agregar enlaces a Bootstrap CSS y JS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="mainmain.js" defer></script>
+<script src="main2.js" defer></script>
 </head>
+
+<body>
 <header>
     <!-- place navbar here -->
     <nav class="navbar navbar-expand-sm navbar-light bg-primary">
@@ -32,34 +34,13 @@
         </div>
     </nav>
 </header>
-<body>
-
     <div class="container">
-        <h2>Crear Usuario</h2>
-        <form id="userForm">
-            <div class="form-group">
-                <label for="nombre">Nombre:</label>
-                <input type="text" class="form-control" id="nombre" name="nombre">
-            </div>
-            <div class="form-group">
-                <label for="correo">Correo:</label>
-                <input type="email" class="form-control" id="correo" name="correo">
-            </div>
-            <div class="form-group">
-                <label for="password1">Contraseña 1:</label>
-                <input type="password" class="form-control" id="password1" name="password1">
-            </div>
-            <div class="form-group">
-                <label for="password2">Contraseña 2:</label>
-                <input type="password" class="form-control" id="password2" name="password2">
-            </div>
-            <button type="submit" class="btn btn-primary">Crear Usuario</button>
-            <button id="clearLocalStorage" class="btn btn-danger">Limpiar localStorage</button>
-        </form>
+        <h2>Usuarios</h2>
+        <div id="userCards"></div>
     </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </body>
 
