--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             </button>
             <div class="collapse navbar-collapse" id="myNavBar">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Crear Usuario</a>
 
                 </div>
             </div>
             <div class="collapse navbar-collapse" id="myNavBar">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="profiles.html">Profiles</a>
+                    <a class="nav-link active" aria-current="page" href="profiles.html">Usuarios</a>
 
                 </div>
             </div>
