Borramos Carpeta Estilos(no se usa) y correccion

--- a/profiles.html
+++ b/profiles.html
@@ -14,14 +14,13 @@
         <!-- place navbar here -->
         <nav class="navbar navbar-expand-sm navbar-light bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">primary</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavBar"
                     aria-controls="myNavBar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="myNavBar">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="index.html">Crear Usuarios</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Crear Usuario</a>
 
                     </div>
                 </div>
